Fixes bug where charge balance was not center aligned Refs #10385

--- a/assets/styles/_charges.css
+++ b/assets/styles/_charges.css
@@ -77,6 +77,7 @@
 }
 
 .charges__item-balance {
+  flex: 1;
   font-weight: 600;
 }
 
